# municipal_finances

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  USAGE.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0e3aaec3cbcb_make_firdatasource_metadata_columns_.py  cbb231d92caa_add_section_name_to_fir_column_meta.py
docs/: architecture.md  data_notes.md  fir_instructions_extraction_plan.md  project_goals.md
docs/working_docs/fir_instructions_extraction/: 00_shared_instructions.md  01_database_models.md  02_slc_parsing_utility.md  02b_slc_format_verification.md  03_content_changes_extraction.md  04_baseline_schedule_meta.md  05_baseline_line_meta.md  (+21 more)
fir_instructions/change_logs/: FIR2020 Changes.csv  FIR2021 Changes.csv  FIR2023 Changes.csv  change_logs.md
fir_instructions/exports/: baseline_column_meta.csv  baseline_line_meta.csv  baseline_schedule_meta.csv  fir_instruction_changelog.csv
fir_instructions/source_files/: FIR2019 Instructions.txt  FIR2020 Instructions.offsets.json  FIR2022 Instructions.offsets.json  FIR2025 Instructions.offsets.json
open_data/boundaries/: Municipal_Boundary_-_Lower_and_Single_Tier.csv  Municipal_Boundary_-_Upper_Tier_and_District.csv  boundaries.md
open_data/housing_starts/: housing_starts.md  ontarios_housing_supply_-_january_december_2023_-_en.csv  ontarios_housing_supply_-_january_december_2024_-_en.csv
open_data/municipality_names/: municipalities_-_en.csv  municipality_names.md
src/municipal_finances/: app.py  data_cleanup.py  data_management.py  database.py  db_management.py  models.py  resources.py  slc.py
tests/: conftest.py  test_api.py  test_data_cleanup.py  test_data_management.py  test_database.py  test_db_management.py  test_models.py  test_resources.py  test_slc.py  test_update_source_data.py
tests/fir_instructions/: test_convert_pdf_to_md.py  test_extract_changelog.py  test_extract_column_meta.py  test_extract_line_meta.py  test_extract_schedule_meta.py  test_pdf_extraction.py
tests/mocks/: mock_fir_data_by_year.html
(+291 files in other folders)
