[project]
name = "municipal_finances"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.115",
    "pandas>=3.0.2",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "sqlmodel>=0.0.22",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.34",
    "alembic>=1.14",
    "pdfplumber>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "geopandas>=1.1.3",
    "httpx>=0.28",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-branch"

[tool.coverage.run]
data_file = "tests/.coverage"
